Fix/(image gallery stretches to full height)

--- a/frontend/src/styles/components/ImageGallery.css
+++ b/frontend/src/styles/components/ImageGallery.css
@@ -5,13 +5,14 @@
 
 .main-image {
     width: 100%;
-    height: 40%;
+    height: 100%;
     overflow: hidden;
     position: relative;
     background-color: var(--img-gallery-background);
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-grow: 1;
 }
 
 .main-image img {
